# Effective-Programming-Practice-for-Economists

./: .gitignore  README.md  git-notes.tex
Git-notes/: git-notes.tex
assignment-1-a-group/: Gewei_Cao.tex  README.md  Xinyue_Wang.tex  Yingyu_Wu.tex  YuHsin_Chen.tex  Zihan_Yang.tex  assignment.ipynb  solution.tex
assignment-2-a-group/: .pre-commit-config.yaml  README.md  assignment.ipynb  environment.yml  production_evaluations.py  production_functions.py  production_standalone.py  solution.tex
assignment-3-a-group/: README.md  assignment.ipynb  environment.yml
assignment-4-a-group/: .gitignore  .pre-commit-config.yaml  README.md  answers.md  assignment.ipynb  environment.yml  monte_carlo.py  run.py  test_monte_carlo.py
assignment-6-a-group/: .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  setup.cfg
assignment-6-a-group/paper/: assignment_6_a_group.tex  assignment_6_a_group_pres.tex  task_paper.py
assignment-6-a-group/src/assignment_6_a_group/analysis/: __init__.py  model.py  task_analysis.py
assignment-6-a-group/src/assignment_6_a_group/data_management/: __init__.py  task_data_management.py
assignment-6-a-group/src/assignment_6_a_group/final/: __init__.py  task_final.py
assignment-6-a-group/tests/analysis/: test_model.py  test_predict.py
assignment-6-a-group/tests/data_management/: test_clean_data.py
assignment_5_a_group/: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  setup.cfg
assignment_5_a_group/paper/: assignment_5_a_group.tex  assignment_5_a_group_pres.tex  task_paper.py
assignment_5_a_group/src/assignment_5_a_group/: __init__.py  config.py
assignment_5_a_group/src/assignment_5_a_group/analysis/: predict.py  task_analysis.py
assignment_5_a_group/src/assignment_5_a_group/data_management/: __init__.py  clean_data.py  task_data_management.py
assignment_5_a_group/src/assignment_5_a_group/final/: __init__.py  plot.py  task_final.py
assignment_5_a_group/tests/analysis/: test_predict.py
assignment_5_a_group/tests/data_management/: test_clean_data.py
